# companyagents

./: .env.example  .gitignore  CHECKLIST.md  CHECKLIST_EN.md  Makefile  README.md  README_EN.md  START_HERE.md  START_HERE_EN.md  __init__.py  pyproject.toml  start-dev.sh
backend/: README.md  README_EN.md  START.md  START_EN.md  TREE.md  __init__.py  alembic.ini
backend/app/: __init__.py  config.py  db.py  main.py  realtime.py  runtime.py  runtime_state.py  security.py
backend/app/api/: __init__.py  activity.py  artifacts.py  dashboard.py  plans.py  reviews.py  router.py  runtime.py  supervisor.py  tasks.py  work_items.py
backend/app/models/: __init__.py  activity_event.py  artifact.py  enums.py  intervention_log.py  task.py  task_plan.py  task_review.py  work_item.py
backend/app/schemas/: __init__.py  activity.py  artifact.py  plan.py  review.py  supervisor.py  task.py  work_item.py
backend/app/services/: __init__.py  artifact_service.py  dashboard_service.py  openclaw_service.py  plan_service.py  review_service.py  runtime_service.py  supervisor_service.py  task_bundle_service.py  task_service.py  work_item_service.py  workflow.py
backend/migration/: env.py
backend/migration/versions/: 001_initial.py
backend/scripts/: seed_demo.py
docs/: final-plan.md  final-plan_EN.md  install-guide.md  install-guide_EN.md  usage-manual.md  usage-manual_EN.md  user-guide.md  user-guide_EN.md
frontend/: .env.example  README.md  TREE.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  i18n.tsx  main.tsx  styles.css  types.ts  utils.ts
frontend/src/api/: artifacts.ts  client.ts  dashboard.ts  plans.ts  runtime.ts  tasks.ts  teams.ts  workItemProgress.ts  workItems.ts  ws.ts
frontend/src/components/: Sidebar.tsx  TaskDetailPanels.tsx  control-plane-panels.tsx
frontend/src/components/task-detail/: form-panels.tsx  overview-panels.tsx  types.ts
frontend/src/hooks/: useControlPlane.ts
frontend/src/pages/: AttentionPage.tsx  BoardPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  TeamsPage.tsx
tests/: test_backend_smoke.py  test_task_flow.py
