[project]
name = "companyagents"
version = "0.1.0"
description = "Modern-company multi-agent workflow control plane."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "companyagents",
  "companyagents.backend",
  "companyagents.backend.app",
  "companyagents.backend.app.api",
  "companyagents.backend.app.models",
  "companyagents.backend.app.schemas",
  "companyagents.backend.app.services",
  "companyagents.backend.scripts",
]

[tool.setuptools.package-dir]
companyagents = "."
"companyagents.backend" = "backend"
"companyagents.backend.app" = "backend/app"
"companyagents.backend.app.api" = "backend/app/api"
"companyagents.backend.app.models" = "backend/app/models"
"companyagents.backend.app.schemas" = "backend/app/schemas"
"companyagents.backend.app.services" = "backend/app/services"
"companyagents.backend.scripts" = "backend/scripts"
